--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,5 +1,5 @@
 body{
-    color: #333;
+    color: red;
     text-align: center;
     font-family: "Arial";
     font-size: 16px;
@@ -20,4 +20,7 @@ body{
     background: blue;
     font-size: 30px;
     color: beige
+}
+#tagline{
+    font-size: 25px;
 }
