cambio en tipo de letra, color de parrafo y titulo

--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,7 +1,7 @@
 body{
     color: #333;
     text-align: center;
-    font-family: "Arial";
+    font-family: "courier";
     font-size: 16px;
     margin: 0;
     padding: 0;
@@ -20,4 +20,7 @@ body{
     background: blue;
     font-size: 30px;
     color: beige
+}
+#post h1, p{
+    color: blue;
 }
